skillsudion menu alignemnt issue fixes

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -564,7 +564,7 @@
   margin: 0 auto;
   border-radius: 0 0px 16px 16px;
   left: -242px;
-  margin-top: 5px;
+  margin-top: 19px;
   max-width: 1300px;
 }
 
